# wolf-impl

./: CMakeLists.txt  README.md  main.cpp
src/: Array.cpp  Array.h  BipartiteGraph.cpp  BipartiteGraph.h  CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  List.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  NodeArray.cpp  NodeArray.h  WolfImpl.cpp  WolfImpl.h
src/impl/: WolfImpl.h
src/model/basic/: Array.h  List.cpp  List.h
src/model/combined/: NodeArray.h
src/model/graph/: BipartiteGraph.cpp  BipartiteGraph.h  Graph.h  Node.h
src/model/impl/: WolfImpl.h
